--- a/vue-02-guide/VueTemplate.html
+++ b/vue-02-guide/VueTemplate.html
@@ -8,15 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
   <body>
-    <div id="app">
-      <div>{{msg}}</div>
-    </div>
+    <div id="app"></div>
     <script>
       const vm = new Vue({
         el: '#app',
-        data: {
-          msg: 'Hello Vue!',
-        },
+        data() {},
       });
     </script>
   </body>
