favicon 등 복사해 줘야 할 파일들을 dist폴더에 빌드하기 (copy-webpack-plugin)

--- a/vue-03-todo/index.html
+++ b/vue-03-todo/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
+    <!-- <link rel="shortcut icon" href="/favicon.ico" /> IE는 index파일과 같은 위치에 favicon.ico가 존재하면 자동으로 설정해 줌 -->
+    <link rel="icon" href="/favicon.png" />
   </head>
   <body>
     <div id="app"></div>
